--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "deploy": "npx expo export -p web && npx eas-cli@latest deploy"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.0",
-    "expo": "^54.0.0-preview.9",
-    "expo-build-properties": "~1.0.4",
-    "expo-constants": "~18.0.4",
-    "expo-font": "~14.0.4",
-    "expo-linking": "~8.0.4",
-    "expo-router": "~6.0.0-beta.8",
-    "expo-splash-screen": "~31.0.5",
-    "expo-status-bar": "~3.0.4",
-    "expo-system-ui": "~6.0.3",
-    "expo-web-browser": "~15.0.3",
+    "@expo/vector-icons": "^15.0.2",
+    "expo": "^54.0.0-preview.16",
+    "expo-build-properties": "~1.0.7",
+    "expo-constants": "~18.0.7",
+    "expo-font": "~14.0.7",
+    "expo-linking": "~8.0.7",
+    "expo-router": "~6.0.0-preview.16",
+    "expo-splash-screen": "~31.0.8",
+    "expo-status-bar": "~3.0.7",
+    "expo-system-ui": "~6.0.6",
+    "expo-web-browser": "~15.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "npm:react-native-tvos@0.81.0-0",
+    "react-native": "npm:react-native-tvos@0.81.1-3",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.0.2",
+    "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.15.3",
+    "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "~0.4.1"
+    "react-native-worklets": "~0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@react-native-tvos/config-tv": "^0.1.3",
+    "@react-native-tvos/config-tv": "^0.1.4",
     "@types/react": "~19.1.10",
     "typescript": "~5.9.2"
   },
