--- a/package.json
+++ b/package.json
@@ -3,47 +3,58 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "EXPO_TV=1 expo start",
-    "android": "EXPO_TV=1 expo run:android",
-    "ios": "EXPO_TV=1 expo run:ios",
+    "postinstall": "patch-package",
+    "prebuild": "DEBUG=expo:* expo prebuild --clean",
+    "prebuild:tv": "DEBUG=expo:* EXPO_TV=1 expo prebuild --clean",
+    "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "reset-project": "./scripts/reset-project.js",
-    "lint": "expo lint",
-    "prebuild": "expo prebuild --clean",
-    "prebuild:tv": "EXPO_TV=1 expo prebuild --clean",
-    "deploy": "npx expo export -p web && npx eas-cli@latest deploy"
+    "lint": "expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "expo": "^54.0.0",
-    "expo-build-properties": "~1.0.7",
-    "expo-font": "~14.0.7",
-    "expo-linking": "~8.0.7",
-    "expo-router": "~6.0.0",
-    "expo-splash-screen": "~31.0.8",
-    "expo-status-bar": "~3.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "npm:react-native-tvos@0.81.4-0",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.0",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "react-native-worklets": "~0.5.0"
+    "@react-navigation/bottom-tabs": "^7.7.3",
+    "@react-navigation/elements": "^2.8.1",
+    "@react-navigation/native": "^7.1.28",
+    "expo": "55.0.0-preview.9",
+    "expo-constants": "~55.0.3",
+    "expo-dev-client": "~55.0.4",
+    "expo-font": "~55.0.3",
+    "expo-glass-effect": "~55.0.4",
+    "expo-image": "~55.0.3",
+    "expo-linking": "~55.0.3",
+    "expo-router": "~55.0.0-preview.6",
+    "expo-splash-screen": "~55.0.4",
+    "expo-status-bar": "~55.0.2",
+    "expo-symbols": "~55.0.3",
+    "expo-system-ui": "~55.0.4",
+    "expo-web-browser": "~55.0.4",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-native": "npm:react-native-tvos@0.83-stable",
+    "react-native-gesture-handler": "~2.30.0",
+    "react-native-reanimated": "~4.2.1",
+    "react-native-safe-area-context": "~5.6.2",
+    "react-native-screens": "4.22.0",
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@react-native-tvos/config-tv": "^0.1.4",
-    "@types/react": "~19.1.10",
+    "@react-native-tvos/config-tv": "^0.1.5",
+    "@types/react": "~19.2.2",
+    "eslint": "^9.25.0",
+    "eslint-config-expo": "~55.0.0",
     "typescript": "~5.9.2"
   },
   "expo": {
     "install": {
       "exclude": [
-        "react-native"
+        "react-native",
+        "react-native-screens"
       ]
     }
   },
