--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
     "@react-navigation/bottom-tabs": "^7.7.3",
     "@react-navigation/elements": "^2.8.1",
     "@react-navigation/native": "^7.1.28",
-    "expo": "55.0.0-preview.9",
-    "expo-constants": "~55.0.3",
-    "expo-dev-client": "~55.0.4",
+    "expo": "^55.0.0-preview.10",
+    "expo-constants": "~55.0.4",
+    "expo-dev-client": "~55.0.5",
     "expo-font": "~55.0.3",
-    "expo-glass-effect": "~55.0.4",
+    "expo-glass-effect": "~55.0.5",
     "expo-image": "~55.0.3",
-    "expo-linking": "~55.0.3",
-    "expo-router": "~55.0.0-preview.6",
-    "expo-splash-screen": "~55.0.4",
+    "expo-linking": "~55.0.4",
+    "expo-router": "~55.0.0-preview.7",
+    "expo-splash-screen": "~55.0.5",
     "expo-status-bar": "~55.0.2",
     "expo-symbols": "~55.0.3",
-    "expo-system-ui": "~55.0.4",
-    "expo-web-browser": "~55.0.4",
+    "expo-system-ui": "~55.0.5",
+    "expo-web-browser": "~55.0.5",
     "patch-package": "^8.0.1",
     "postinstall-postinstall": "^2.1.0",
     "react": "19.2.0",
