Revert to current default template

--- a/app.json
+++ b/app.json
@@ -1,12 +1,14 @@
 {
   "expo": {
+    "name": "HelloWorld",
+    "slug": "expo-template-default",
+    "version": "1.0.0",
+    "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "routertv",
+    "scheme": "helloworld",
     "userInterfaceStyle": "automatic",
     "ios": {
-      "supportsTablet": true,
-      "icon": "./assets/expo.icon",
-      "bundleIdentifier": "com.dougexpo.withroutertv"
+      "icon": "./assets/expo.icon"
     },
     "android": {
       "adaptiveIcon": {
@@ -15,9 +17,7 @@
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "package": "com.dougexpo.withroutertv"
+      "predictiveBackGestureEnabled": false
     },
     "web": {
       "output": "static",
@@ -34,24 +34,7 @@
             "imageWidth": 76
           }
         }
-      ],
-      [
-        "@react-native-tvos/config-tv",
-        {
-          "androidTVBanner": "./assets/tv_icons/icon-400x240.png",
-          "androidTVIcon": "./assets/tv_icons/icon-760x760.png",
-          "appleTVImages": {
-            "icon": "./assets/tv_icons/icon-1280x768.png",
-            "iconSmall": "./assets/tv_icons/icon-400x240.png",
-            "iconSmall2x": "./assets/tv_icons/icon-800x480.png",
-            "topShelf": "./assets/tv_icons/icon-1920x720.png",
-            "topShelf2x": "./assets/tv_icons/icon-3840x1440.png",
-            "topShelfWide": "./assets/tv_icons/icon-2320x720.png",
-            "topShelfWide2x": "./assets/tv_icons/icon-4640x1440.png"
-          }
-        }
-      ],
-      "expo-web-browser"
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
