--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "with-router-tv",
+  "name": "expo-template-default",
+  "license": "0BSD",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "55.1.4",
   "scripts": {
-    "postinstall": "patch-package",
-    "prebuild": "DEBUG=expo:* expo prebuild --clean",
-    "prebuild:tv": "DEBUG=expo:* EXPO_TV=1 expo prebuild --clean",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -18,9 +16,9 @@
     "@react-navigation/bottom-tabs": "^7.7.3",
     "@react-navigation/elements": "^2.8.1",
     "@react-navigation/native": "^7.1.28",
-    "expo": "^55.0.0-preview.10",
+    "expo": "~55.0.0-preview.10",
     "expo-constants": "~55.0.4",
-    "expo-dev-client": "~55.0.5",
+    "expo-device": "~55.0.6",
     "expo-font": "~55.0.3",
     "expo-glass-effect": "~55.0.5",
     "expo-image": "~55.0.3",
@@ -31,32 +29,20 @@
     "expo-symbols": "~55.0.3",
     "expo-system-ui": "~55.0.5",
     "expo-web-browser": "~55.0.5",
-    "patch-package": "^8.0.1",
-    "postinstall-postinstall": "^2.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-native": "npm:react-native-tvos@0.83-stable",
+    "react-native": "0.83.2",
     "react-native-gesture-handler": "~2.30.0",
+    "react-native-worklets": "0.7.2",
     "react-native-reanimated": "~4.2.1",
     "react-native-safe-area-context": "~5.6.2",
-    "react-native-screens": "4.22.0",
-    "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.7.2"
+    "react-native-screens": "~4.23.0",
+    "react-native-web": "~0.21.0"
   },
   "devDependencies": {
-    "@react-native-tvos/config-tv": "^0.1.5",
     "@types/react": "~19.2.2",
+    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~55.0.0",
-    "typescript": "~5.9.2"
-  },
-  "expo": {
-    "install": {
-      "exclude": [
-        "react-native",
-        "react-native-screens"
-      ]
-    }
-  },
-  "private": true
+    "eslint-config-expo": "~55.0.0"
+  }
 }
