--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "postinstall": "patch-package",
-    "prebuild": "DEBUG=expo:* expo prebuild --clean",
-    "prebuild:tv": "DEBUG=expo:* EXPO_TV=1 expo prebuild --clean",
+    "prebuild": "expo prebuild --clean",
+    "prebuild:tv": "EXPO_TV=1 expo prebuild --clean",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
@@ -19,7 +18,6 @@
     "@react-navigation/elements": "^2.8.1",
     "@react-navigation/native": "^7.1.28",
     "expo": "^55.0.0-preview.11",
-    "expo-audio": "~55.0.6",
     "expo-build-properties": "~55.0.7",
     "expo-constants": "~55.0.5",
     "expo-dev-client": "~55.0.6",
@@ -33,10 +31,7 @@
     "expo-status-bar": "~55.0.3",
     "expo-symbols": "~55.0.4",
     "expo-system-ui": "~55.0.6",
-    "expo-video": "~55.0.6",
     "expo-web-browser": "~55.0.6",
-    "patch-package": "^8.0.1",
-    "postinstall-postinstall": "^2.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-native": "npm:react-native-tvos@0.83-stable",
@@ -57,8 +52,7 @@
   "expo": {
     "install": {
       "exclude": [
-        "react-native",
-        "react-native-screens"
+        "react-native"
       ]
     }
   },
